--- a/.github/workflows/update_atcoder.yml
+++ b/.github/workflows/update_atcoder.yml
@@ -34,8 +34,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --locla user.email "github-actions[bot]@users.noreply.github.com"
-          git config --locla user.name "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add submissions/
           git commit -m "Update AtCoder submissions"
           git push
