--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,5 +2,9 @@
   "alwaysUpdateLinks": true,
   "newFileLocation": "current",
   "attachmentFolderPath": "attachments",
-  "promptDelete": false
+  "promptDelete": false,
+  "foldHeading": true,
+  "showInlineTitle": false,
+  "showUnsupportedFiles": true,
+  "strictLineBreaks": true
 }
