--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,7 @@
   "foldHeading": true,
   "showInlineTitle": false,
   "showUnsupportedFiles": true,
-  "strictLineBreaks": true
+  "strictLineBreaks": true,
+  "newLinkFormat": "relative",
+  "useMarkdownLinks": true
 }
