Obsidian関連ファイルとOS設定・キャッシュを.gitignoreに追加

--- a/.gitignore
+++ b/.gitignore
@@ -177,5 +177,12 @@ cython_debug/
 # Driver files
 chromedriver/
 
-# Obsidian files
+# Obsidian
 .obsidian/workspace.json
+.obsidian/workspace-mobile.json
+.obsidian/*-plugins.json
+.obsidian/appearance.json
+
+# Add below lines to exclude OS settings and caches
+.trash/
+.DS_Store
